crates/analyzer/tests/snapshots/errors__trait_conflicting_impls.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate `impl` blocks for trait `Foo` for type `Bar`
  ┌─ compile_errors/trait_conflicting_impls.fe:6:1
  │
6 │ impl Foo for Bar {}
  │ ^^^^^^^^^^^^^^^^ `` first defined here
7 │ impl Foo for Bar {}
  │ ---------------- `` redefined here


